@@ -27,6 +27,7 @@ plot.igraph <- function(x, layout=layout.random, layout.par=list(),
                        edge.color="darkgrey", edge.width=1,
                        edge.labels=NA, 
                        vertex.frame.color="black", loop.cex=1.0,
+                       margin=0, loop.angle=0,
                        # SPECIFIC: #####################################
                        axes=FALSE, xlab="", ylab="",
                        xlim=c(-1,1), ylim=c(-1,1),
@@ -49,6 +50,8 @@ plot.igraph <- function(x, layout=layout.random, layout.par=list(),
   edge.labels <- i.get.edge.labels(graph, edge.labels)
 
   # create the plot
+  xlim <- c(xlim[1]-margin, xlim[2]+margin)
+  ylim <- c(ylim[1]-margin, ylim[2]+margin)
   plot(0, 0, type="n", xlab=xlab, ylab=ylab, asp=1, xlim=xlim, ylim=ylim,
        axes=axes, ...)
 
@@ -59,6 +62,8 @@ plot.igraph <- function(x, layout=layout.random, layout.par=list(),
   el <- get.edgelist(graph)
   loops.v <- el[,1] [ el[,1] == el[,2] ] + 1
   loops.e <- which(el[,1] == el[,2])
+  loop.labels <- edge.labels[el[,1] == el[,2]]
+  edge.labels <- edge.labels[el[,1] != el[,2]]
   el <- el[el[,1] != el[,2],]
   dim(el) <- c(length(el)/2, 2)
   x0 <- layout[,1][el[,1]+1]
@@ -86,21 +91,77 @@ plot.igraph <- function(x, layout=layout.random, layout.par=list(),
   if (length(loops.e) > 0) {
     ec <- edge.color
     if (length(ec)>1) { ec <- ec[loops.e] }
-    symbols(x=layout[loops.v,1]+.08*loop.cex,
-            y=layout[loops.v,2], fg=ec, bg="white",
-            circles=rep(.08*loop.cex, length(loops.e)), add=TRUE, inches=FALSE)
-    if (is.directed(graph)) {
-      # arrows
-      lr0 <- vertex.size
-      if (length(vertex.size)>1) { lr0 <- vertex.size[loops.v] }
-      lx0 <- layout[loops.v,1]
-      ly0 <- layout[loops.v,2]
-      lr1 <- .08*loop.cex
-      lcx <- (lr0^2+2*lx0*lr1)/(2*lr1)
-      lcy <- ly0+sqrt(ly0^2-((lcx-lx0)^2+ly0^2-lr0^2))
-      arrows(lcx+.001, lcy+.001, lcx, lcy, angle=20, length=0.2,
-             col=edge.color, lwd=edge.width)
+
+    point.on.cubic.bezier <- function(cp, t) {
+
+      c <- 3 * (cp[2,] - cp[1,])
+      b <- 3 * (cp[3,] - cp[2,]) - c
+      a <- cp[4,] - cp[1,] - c - b
+      
+      t2 <- t*t;
+      t3 <- t*t*t
+      
+      a*t3 + b*t2 + c*t + cp[1,]
     }
+
+    compute.bezier <- function(cp, points) {
+      dt <- seq(0, 1, by=1/(points-1))
+      sapply(dt, function(t) point.on.cubic.bezier(cp, t))
+    }
+    
+    plot.bezier <- function(cp, points, color, width, arrows) {
+      p <- compute.bezier( cp, points )
+      polygon(p[1,], p[2,], border=color, lwd=width)
+      if (arrows) {
+        arrows(p[1,ncol(p)-1], p[2,ncol(p)-1], p[1,ncol(p)], p[2,ncol(p)],
+               length=.2, angle=20, col=color)
+      }
+    }
+    
+    loop <- function(x0, y0, cx=x0, cy=y0, color, angle=0, label=NA,
+                     width=1, arrows=FALSE) {
+
+      rad <- angle/180*pi
+      center <- c(cx,cy)
+      cp <- matrix( c(x0,y0, x0+.4,y0+.2, x0+.4,y0-.2, x0,y0),
+                   nc=2, byrow=TRUE)
+      phi <- atan2(cp[,2]-center[2], cp[,1]-center[1])
+      r <- sqrt((cp[,1]-center[1])**2 + (cp[,2]-center[2])**2)
+      
+      phi <- phi + rad
+      
+      cp[,1] <- cx+r*cos(phi)
+      cp[,2] <- cy+r*sin(phi)
+
+      plot.bezier(cp, 50, color, width, arrows=arrows)
+
+      if (!is.na(label)) {
+        lx <- x0+.3
+        ly <- y0
+        phi <- atan2(ly-center[2], lx-center[1])
+        r <- sqrt((lx-center[1])**2 + (ly-center[2])**2)
+
+        phi <- phi + rad
+
+        lx <- cx+r*cos(phi)
+        ly <- cy+r*sin(phi)
+
+        text(lx, ly, label, col=label.color)
+      }
+    }
+
+    ec <- edge.color
+    if (length(ec)>1) { ec <- ec[loops.e] }
+    vs <- vertex.size
+    if (length(vertex.size)>1) { vs <- vs[loops.e] }
+    ew <- edge.width
+    if (length(edge.width)>1) { ew <- ew[loops.el] }
+    xx0 <- layout[loops.v,1] + cos(loop.angle[loops.e]/180*pi) * vs
+    yy0 <- layout[loops.v,2] + sin(loop.angle[loops.e]/180*pi) * vs
+    mapply(loop, xx0, yy0,
+           color=ec, angle=loop.angle[loops.e], label=loop.labels,
+           width=ew, MoreArgs=list(arrows=is.directed(graph)))
+
   }
   
   arrow.code <- ifelse(is.directed(graph), 2, 0)
@@ -109,6 +170,7 @@ plot.igraph <- function(x, layout=layout.random, layout.par=list(),
            col=edge.color, lwd=edge.width)
     x <- (x0+x1)/2
     y <- (y0+y1)/2
+    if (!is.null(label.font)) par(family=label.font)
     text(x, y, labels=edge.labels, col=label.color)
   }
   
