@@ -2,6 +2,10 @@
 
 	* interfaces/R/igraph/R/plot.R (plot.igraph) : loop edges added
 
+	* interfaces/R/igraph/R/plot.R (plot.igraph) : more advanced loops
+	* interfaces/R/igraph/R/tkplot.R (tkplot, .tkplot.update.edge)
+	(.tkplot.create.edge) : loop edges added
+	
 2006-09-21  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/interace.R (add.vertices, add.edges) :
